[package]
name = "links-extractor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
select = "0.6.0"
error-chain = "0.12.4"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1.23.1", features = ["full"] }